@@ -8,7 +8,7 @@ Icon=utilities-system-monitor
 Terminal=false
 Type=Application
 StartupNotify=true
-Categories=GNOME;GTK;Application;System;Monitor;X-Red-Hat-Base;
+Categories=GNOME;GTK;System;Monitor;X-Red-Hat-Base;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=system-monitor
 X-GNOME-Bugzilla-Component=general
