@@ -1,3 +1,13 @@
+2007-03-11  Benoît Dejean  <benoit@placenet.org>
+
+	* gnome-system-monitor.desktop.in.in:
+	
+	Gnome Goal #3 : removed "Application" category from .desktop file.
+	
+	* src/callbacks.cpp:
+
+	Fixed copyright and Paolo name.
+
 2007-03-04  Benoît Dejean  <benoit@placenet.org>
 
 	* src/interface.cpp:
